--- a/index.html
+++ b/index.html
@@ -2,20 +2,25 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>MediaPipe Pose PoC</title>
+  <title>MediaPipe Pose PoC (Static)</title>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <h1>Archery Pose PoC</h1>
+  <h1>Archery PoC - Statischer Bildabgleich</h1>
+  
+  <input type="file" id="imageInput" accept="image/*">
+  
   <div class="container">
     <canvas class="output_canvas" width="640" height="480"></canvas>
-    <video class="input_video" width="640" height="480" autoplay muted playsinline></video>
-  </div>
+    
+    <img id="loadedImage" style="display: none;">
+    
+    </div>
   
-  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/control_utils/control_utils.js" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils/drawing_utils.js" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/pose/pose.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js" ...></script>
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/control_utils/control_utils.js" ...></script>
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils/drawing_utils.js" ...></script>
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/pose/pose.js" ...></script>
   
   <script src="script.js"></script>
 </body>
