--- a/index.html
+++ b/index.html
@@ -2,25 +2,36 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>MediaPipe Pose PoC (Static)</title>
+  <title>Archery AI - Live PoC</title>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <h1>Archery PoC - Statischer Bildabgleich</h1>
-  
-  <input type="file" id="imageInput" accept="image/*">
-  
+
+  <h1>Archery AI - Live Feedback PoC</h1>
+
+  <div id="calibration-step">
+    <h2>Schritt 1: Kalibrierung</h2>
+    <p>Lade ein Bild von dir in der "Ideal-Pose" hoch:</p>
+    <input type="file" id="imageInput" accept="image/*">
+  </div>
+
+  <div id="training-step" style="display: none;">
+    <h2>Schritt 2: Training (Live-Feed)</h2>
+    <button id="startTrainingButton">Training starten</button>
+    <p>Feedback: <span id="feedback-text">Warte auf Start...</span></p>
+  </div>
+
   <div class="container">
     <canvas class="output_canvas" width="640" height="480"></canvas>
+    <video class="input_video" width="640" height="480" autoplay muted playsinline></video>
     
     <img id="loadedImage" style="display: none;">
-    
-    </div>
+  </div>
   
-  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js" ...></script>
-  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/control_utils/control_utils.js" ...></script>
-  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils/drawing_utils.js" ...></script>
-  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/pose/pose.js" ...></script>
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/control_utils/control_utils.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils/drawing_utils.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/pose/pose.js" crossorigin="anonymous"></script>
   
   <script src="script.js"></script>
 </body>
