--- a/index.html
+++ b/index.html
@@ -13,18 +13,22 @@
     <h2>Schritt 1: Kalibrierung</h2>
     <p>Lade ein Bild von dir in der "Ideal-Pose" hoch:</p>
     <input type="file" id="imageInput" accept="image/*">
+    
+    <div id="confirmation-area" style="display: none;">
+      <p id="calibration-result-text">Kalibrierung erfolgreich!</p>
+      <button id="confirmButton">Bestätigen & Training starten</button>
+      <button id="retryButton">Erneut versuchen</button>
+    </div>
   </div>
 
   <div id="training-step" style="display: none;">
     <h2>Schritt 2: Training (Live-Feed)</h2>
-    <button id="startTrainingButton">Training starten</button>
-    <p>Feedback: <span id="feedback-text">Warte auf Start...</span></p>
+    <p>Feedback: <span id="feedback-text">Position einnehmen...</span></p>
   </div>
 
   <div class="container">
     <canvas class="output_canvas" width="640" height="480"></canvas>
     <video class="input_video" width="640" height="480" autoplay muted playsinline></video>
-    
     <img id="loadedImage" style="display: none;">
   </div>
   
