--- a/src/demo.html
+++ b/src/demo.html
@@ -63,7 +63,7 @@
             <span class="material-symbols-outlined text-primary text-6xl">target</span>
         </div>
         <h1 class="text-4xl font-bold mb-2">Archer<span class="text-primary">AI</span></h1>
-        <p class="text-gray-400 mb-8">Coach Helmut Edition</p>
+        <p class="text-gray-400 mb-8">Die Intelligente Home Training Extension</p>
         <button onclick="startWizard()" class="w-full max-w-sm py-4 bg-primary text-background-dark font-bold rounded-xl hover:brightness-110 transition">
             Starten
         </button>
